[package]
name = "failpoints"
version = "0.1.0"
authors = ["RiteLabs"]
license = "Apache-2.0 OR MIT"
keywords = ["failpoints", "fail"]
repository = "https://github.com/ritelabs/failpoints"
readme = "README.md"
homepage = "https://github.com/ritelabs/failpoints"
documentation = "https://docs.rs/failpoints"
description = "Failpoints for rust. Another fail-rs."
categories = ["development-tools::testing"]
edition = "2021"
exclude = ["/.github/*"]

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.11.2"
rand = "0.8.4"
tracing = "0.1.29"

[dev-dependencies]
tracing-test = "0.2.1"

[features]
failpoints = []

[package.metadata.docs.rs]
all-features = true
